好きになる力

--- a/30000/2024-11-04.md
+++ b/30000/2024-11-04.md
@@ -1,8 +1,51 @@
 # 2024/11/04 のメモ
 
-## 好きになる力
+## [「これからの時代に必要なスキルは、“好きになる力”です」前田裕二が迷わず即答した理由とは](https://youtu.be/AeVm9-oVXXo?si=5euB66z4uwoGehYD)
 
-[「これからの時代に必要なスキルは、“好きになる力”です」前田裕二が迷わず即答した理由とは](https://youtu.be/AeVm9-oVXXo?si=5euB66z4uwoGehYD)
-知識や技術、努力はドレスコード。差別化できることがあるとしたら、人間力。
+- ★ 知識や技術、努力はドレスコード。差別化できることがあるとしたら、人間力。
+- 好きになってもらう力というのではなく、好きになる力というのがいい。
+  - 好きになるのは自分の問題で再現性がある。好きになってもらうは、科学できない。芸術より。
+- 観察から好きになっていく。
+- 大喜利とは、大きく喜ばせて、自分も利を得る。
+- 好きになるとは、時間を使うこと。
+- 0.（まるぜろ）として、自分がご機嫌で、自分に自身がある状態でないと人を好きになれない。
+  - 人のことをディスっている人は、不機嫌な人
+- いい人を見つけるプロ。
+  - この人のここはもしかしたら、めっちゃすごいことになるかもよ？は見つけるのは得意。
 
-好きになってもらう力というのではなく、好きになる力というのがいい。
+## [「そんなに頑張って人を好きになる必要、あります？」“好きになる力”について前田裕二さんに質問攻め](https://youtu.be/UP4o6BpinCM?si=Ehq7TF1wueq0LOXK)
+
+- 自分が相手のことを好きになって、相手に好かれると、自分にめっちゃ注文くれる、そうすと本気で勉強する。
+- この野郎からが勝負
+  - 関係値が遠いい人や、嫌いな人を好きになる訓練
+- 好きになるスキルは、テクニックなスキル
+- 本音ではないことを言わない。
+  - 嘘を言ったら、大喜利選手権は負け。
+- 伝え方のスキル
+  - 具体 階層を一つ下げる。
+    - 「その黒い服いいですね」より、「その黒い服のテクスチャいいですね」
+  - 自分のエピソードをくっつける。
+    - 僕もめちゃくちゃテクスチャにこだわって服を買っているんです。これも、そのとき在庫なくて、取り寄せたんです。
+- 好きと伝えると、チーム全体の力が上がる。
+- AI で効率化が進んだら、人と働く意味は楽しいからになる。
+  - そうなった世界で、あなたは選ばれる側ですか？
+  - 選ぶ側でもあるけれど、選ばれる側でもある。
+- SNS は顕著で、ロジックとロジックをぶつけ合っているように見えて、みんな「この人は、自分の敵か、味方か」しか見ていない。
+  - ロジックなんて後付。
+  - 味方してくれていたら、むしろ味方してくれている人のロジックがズレていても、なんとか味方してくれる。
+  - 「あなたことを否定しているわけではないんですけど」とロジカルに言っても、受ける印象として「どう考えても敵対視している」と思ったら、受け入れられない。
+- そういう好き嫌いで分断される世の中になると、とにかく好きって飛びつく人のほうが相対的にチャンスが高まる。
+  - 運気が上る。
+  - 人のことを嫌いとすぐに攻撃する人は、チャンスを失う可能性が高い。
+  - 感謝と謙虚と毎日言ってたら、勝手に思い込むこともある。
+- 恋愛で、A と B でお互いに嫌っている関係があったときに、A にも B にも上手に言ってたら、なんか信用できない人と言われるリスクがある。
+  - 組織のリーダーのマネジメントは、それに近い。
+  - フェアでフラットで平等である必要があるから。
+- 嫌いなところを見つけるのも大事
+  - はっきり言わないと、好きなポイントが映ないから。
+  - 嫌いなところは、はっきりいう。
+  - ただ、深く仕事をしている人や深い関係値の人に対しては。
+  - 浅い人にそれはだめ。
+- 好きのベースがあってこそ、相手も受け入れれる。
+  - 好きがあると、指摘しやすくなるというのもある。
+- それだけの観察力があると、周りの人もどう思われているのかを知りたくなる。
