コンサルトと事業会社の違い

--- a/30000/2024-11-04.md
+++ b/30000/2024-11-04.md
@@ -49,3 +49,18 @@
 - 好きのベースがあってこそ、相手も受け入れれる。
   - 好きがあると、指摘しやすくなるというのもある。
 - それだけの観察力があると、周りの人もどう思われているのかを知りたくなる。
+
+## [元マッキンゼーのエースが語る企業の選び方【南場智子 × 波頭亮】](https://youtu.be/Nh_rzdVh15U?si=2M5z6lsEinpSFFgG)
+
+- 正しいことを導き出して、それを伝えるのがコンサル
+- 実業は、それを実際にやらないといけない。やって成果を出さないといけない。
+  - 濁流の先に肥沃な土地がある。だから、渡ったほうがいいですよと。
+  - ちょっと親切なコンサルだと、こうやったら渡れますよと教えてくれる。
+  - 実業家はその怖そうな濁流に一番先に足を突っ込んで、渡りきらないといけない。
+  - そのときに一人だけ渡りきっててもしゃーない。みんながついてこないと、行った先で一人で耕すことになる。
+  - 実際に足を突っ込んだら、誰も教えてくれなかったことがおきる。
+  - Doer になって初めてわかることは多い。
+    - ワニがでたり、川だと思ったら底抜けだったとか
+  - 瞬時に、何が正しいのか戦略を立て直しながら「大丈夫だよ、怖くないよ、行けるよ」という背中を見せながら渡らないと誰もついてこない。
+  - 胆力が大事。
+    - ★ アドバイスするとは次元が違う胆力が必要。
