★ 正解と言われることをみんながして、この国はこうなってしまっている。

--- a/30000/2024-11-04.md
+++ b/30000/2024-11-04.md
@@ -59,8 +59,46 @@
   - 実業家はその怖そうな濁流に一番先に足を突っ込んで、渡りきらないといけない。
   - そのときに一人だけ渡りきっててもしゃーない。みんながついてこないと、行った先で一人で耕すことになる。
   - 実際に足を突っ込んだら、誰も教えてくれなかったことがおきる。
-  - Doer になって初めてわかることは多い。
+  - Doer（行動する人） になって初めてわかることは多い。
     - ワニがでたり、川だと思ったら底抜けだったとか
   - 瞬時に、何が正しいのか戦略を立て直しながら「大丈夫だよ、怖くないよ、行けるよ」という背中を見せながら渡らないと誰もついてこない。
   - 胆力が大事。
     - ★ アドバイスするとは次元が違う胆力が必要。
+  - コンサルは、インプレッシブにコミュニケーションをするスキルが身につくかもしれない。
+  - 事業会社は、カッコつけているんじゃないよ、成果出せという世界
+    - 泥水すすってでも、成果出す
+    - 反対に、あまり賢そうだと誰も助けてくれない。
+  - 小さくても事業をやっている会社に行ったほうが事業家になるならいい。
+  - コンサルタントになるなら、その仕事にプライドを持ってやったほうがいい。スキルとしては全く違うから。
+  - 体系的に色々な業界のことが学べるから、コンサルに行きたいという人については？
+    - そういう子どもじみた学生を相手したくない。
+    - もう少し考える力がないと、使い物にならない。
+  - 今ハードワークをできる会社が減っている。
+  - ★ 日本の中で一流と言われるような会社に行って安定を狙うということは、沈み行くタイタニックで特等席を狙うという意味のないこと。
+    - 船が沈んでも泳げるし、他の船でも漕げるしという、どこに行っても生きていける自分の実力をつけれる場所に行くべき。
+    - それは親が喜ぶ就職ではないし、友達にドヤ顔をできる就職ではない。
+    - 本当に自分の力の付く場所
+      - 自分が夢中になれること
+      - ストレッチアサインしてくれるところ
+      - 本物の打席に立たせてくれて、とことん仕事をさせてくれるところ、挑戦させてくれる場所
+- コンサルトして偉そうにいうなら、自分でやれ。
+- そんなに熱量高くいうなら自分でやってみればいいじゃん。
+  - で、実際に起業をする。
+  - そうしたら、偉そうに言っていたことができない。
+  - 今まで偉そうに言ってた人たちに、謝りたかった
+- ラクして成長なんてしない。
+- 最初はハードワークしかない。
+- 日本の教育を受けてきた人は多くの人がハンデキャップを背負っている。
+- それは、自分で自分の腹に考えを聞くことができない。
+- 周りがどう思うのか、何が正解なのか、先生が持っている正解を言い当てるということを、ずっと繰り返している時期も長い。
+- 色々な重要な意思決定も「何が正解なんだっけ？」って考えるときに、世の中を見ちゃうということが多い。
+- 世の中の多くの人が間違った意思決定をしている。
+  - 間違って意思決定というと失礼かもしれないけれど。
+- 沈み行くタイタニックの特等席っていうのを探している人が多い。
+- 周りに惑わされず、自分で選択する訓練をしたらいい。
+- すべてのことに関して、自分の脳みそで考えることができて、自分の腹に自分の考えを聞くことが本当にできるという。
+- 誰かの尺度で決めるのではなく。
+- ★ 正解と言われることをみんながして、この国はこうなってしまっている。
+- だから、みんなが言っている正解を疑う力をつけておくと良い。
+- 就活なら、どこに行ったら自分が一番ストレッチできるかなと、結構ヒリヒリと「これでもかというくらいの仕事が飛んでくる場所を選んだほうがいい。
+- 世の中の尺度でいう、一般的ないい会社と言われている会社とは無関係に、自分でそういうところを見つけ出すというのが大事。
