改善点も一つのファイルで管理 長くなるものだけ、新しいファイルを作ろうかな。

--- a/5/三山木マジック/improvement/2024-10-31_01-39_New_Note.md
+++ b/5/三山木マジック/improvement/2024-10-31_01-39_New_Note.md
@@ -1,5 +1,5 @@
-# 2024/10/31 『「これでお前も俺の女だな」の件について』の改善点
-
-## 改善点
+# 改善点
 
 - 文字起こしの校閲は、次からなるべく省略しないで、改行位置も合わせた出力がでるまで何回か試す。
+- 改行はいらないかも
+  - 細切れで話がよくわからないよりも、内容がわかる字幕のほうが良さそう。
