概要欄と編集指示

--- a/5/三山木マジック/edit/概要欄2024-11-17.md
+++ b/5/三山木マジック/edit/概要欄2024-11-17.md
@@ -28,3 +28,15 @@
 ```text
 VOICEVOX:四国めたん
 ```
+
+```text
+こんにちは！モテ男製造工場の工場長、三山木（みやまぎ）です。
+現代の恋愛市場は、正直言ってちょっとねじれてるよな…。
+でも、俺は信じてるんだ。恋愛をもっと楽しく、素晴らしいものにするためには、男たちの「本当の魅力」を引き出すことが必要だって！
+
+ここでは、ただの「表面的なモテ」じゃなくて、本物のモテるマインドセットをみんなに教えていく。
+これを知れば、恋愛だけじゃなく、人生そのものが変わるはずだ。
+
+自信をつけたい人、恋愛で悩んでいる人、まずは俺の動画をチェックしてくれ。
+さあ、俺についてこい！
+```
