--- a/三山木マジック/テンプレート/概要欄2024-11-17/概要欄2024-11-17.md
+++ b/三山木マジック/テンプレート/概要欄2024-11-17/概要欄2024-11-17.md
@@ -40,3 +40,16 @@ VOICEVOX:四国めたん
 自信をつけたい人、恋愛で悩んでいる人、まずは俺の動画をチェックしてくれ。
 さあ、俺についてこい！
 ```
+
+``` text
+こんにちは！モテ男製造工場の工場長、三山木（みやまき）です。
+現代の恋愛市場は、正直言ってちょっとねじれてるよな…。
+でも、俺は信じてるんだ。恋愛をもっと楽しく、素晴らしいものにするためには、男たちの「本当の魅力」を引き出すことが必要だって！
+
+ここでは、ただの「表面的なモテ」じゃなくて、本物のモテるマインドセットをみんなに教えていく。
+これを知れば、恋愛だけじゃなく、人生そのものが変わるはずだ。
+
+自信をつけたい人、恋愛で悩んでいる人、まずは俺の動画をチェックしてくれ。
+さあ、俺についてこい！
+```
+
