--- a/メモ/ChatGPTへの指示/コンテンツ作成/スライド作成/スライド作成.md
+++ b/メモ/ChatGPTへの指示/コンテンツ作成/スライド作成/スライド作成.md
@@ -20,3 +20,17 @@ assetはcdnから取得してください。
 おしゃれな日本語フォントでお願いします。
 ```
 
+```text
+今までのやり取りをもとに、動画で使うスライド資料を、Reveal.jsを用いて javascriptの資産を使って、使えるものは何でも使ってとってもおしゃれなプレゼンテーションを作ってください。
+・制約事項
+
+コードは一切省略しないでください。
+100万円で売れる価値の高いプレゼンテーションを作成してください
+アニメーションなどを入れてリッチな見た目にしてください
+絵文字をできるだけ使ってください。
+色は白を基調としたカラフルな色使いでお願いします。
+様々なレイアウトで作成し、アニメーションを利用してください。
+おしゃれな日本語フォントでお願いします。
+```
+
+​	
