・ベットフレーム決定 ・コアラマットレスは、年末のセールを待つ。 ・部屋の配置 　→紙の魅力2最近気づいてきた。

--- a/メモ/Markdown/調査/同棲ベットについて.md
+++ b/メモ/Markdown/調査/同棲ベットについて.md
@@ -110,3 +110,15 @@
 [フェリシア すのこベッド クイーンロング フレームのみ 木製 ローベッド 天然木 ロング パイン材 |ナチュラル ホワイト ブラウン 棚](https://www.i-office1.net/shop/36113208/?utm_source=google&utm_medium=cpc&utm_campaign=Pmax&gad_source=1&gclid=CjwKCAiAyJS7BhBiEiwAyS9uNRLpLqXOFTeaIqJjsIN83GFm0-vJfcQv5_P6Yp_MyN8h_6MmwSRaERoCbGEQAvD_BwE)
 
 [レスター ローベッド クイーン フレームのみ 木製 棚付き LED 照明 コンセント すのこ ブラック ホワイト | すのこベッド ベッド](https://www.i-office1.net/shop/36112754/)
+
+## ベットフレーム決定
+
+[レスター ローベッド クイーン フレームのみ 木製 棚付き LED 照明 コンセント すのこ ブラック ホワイト | すのこベッド ベッド](https://www.i-office1.net/shop/36112754/)
+
+## 部屋配置
+
+![alt text](Assets/スキャン_20241220-2039.jpg)
+
+![alt text](<Assets/スキャン_20241220-2040(1).jpg>)
+
+![alt text](Assets/スキャン_20241220-2040.jpg)
