・画像に説明追加

--- a/メモ/Markdown/調査/同棲ベットについて.md
+++ b/メモ/Markdown/調査/同棲ベットについて.md
@@ -117,8 +117,8 @@
 
 ## 部屋配置
 
-![alt text](Assets/スキャン_20241220-2039.jpg)
+![間取図](<Assets/スキャン_20241220-2040(1).jpg>)
 
-![alt text](<Assets/スキャン_20241220-2040(1).jpg>)
+![ベット置き方1](Assets/スキャン_20241220-2039.jpg)
 
-![alt text](Assets/スキャン_20241220-2040.jpg)
+![ベット置き方2](Assets/スキャン_20241220-2040.jpg)
