・キャプション追加

--- a/メモ/Markdown/調査/同棲ベットについて.md
+++ b/メモ/Markdown/調査/同棲ベットについて.md
@@ -118,7 +118,10 @@
 ## 部屋配置
 
 ![間取図](<Assets/スキャン_20241220-2040(1).jpg>)
+_間取図_
 
 ![ベット置き方1](Assets/スキャン_20241220-2039.jpg)
+_ベット置き方 1_
 
 ![ベット置き方2](Assets/スキャン_20241220-2040.jpg)
+_ベット置き方 2_
