今日の日記を一行に

--- a/メモ/Markdown/英語学習/日記/2024-12-21_英語日記.md
+++ b/メモ/Markdown/英語学習/日記/2024-12-21_英語日記.md
@@ -118,6 +118,92 @@ I’ll keep working hard to continue studying English! My goal is to learn at le
     - **"Reviewing"**: 復習すること。
     - **"might be a good idea"**: ～は良いアイデアかもしれない。
 
+## 日記の内容を 1 行に！
+
+I woke up late, edited videos, attended a company year-end party, celebrated my dad's birthday, and planned tomorrow's outing with my girlfriend.
+
+### **内容: "I woke up late, edited videos, attended a company year-end party, celebrated my dad's birthday, and planned tomorrow's outing with my girlfriend."**
+
+---
+
+### **1. 文法解説**
+
+#### **(1) I woke up late**
+
+- **"I"**: 主語（私）。
+- **"woke up"**: 動詞「wake up（起きる）」の過去形。「遅く起きた」という意味。
+- **"late"**: 副詞で「遅く」。動詞 **"woke up"** を修飾しています。
+
+#### **(2) edited videos**
+
+- **"edited"**: 動詞「edit（編集する）」の過去形。過去の行動を示します。
+- **"videos"**: 名詞で複数形。「動画」を意味します。
+
+#### **(3) attended a company year-end party**
+
+- **"attended"**: 動詞「attend（出席する）」の過去形。
+- **"a company year-end party"**: 名詞句。「会社の忘年会」を意味します。
+  - **"a"**: 不特定の 1 つの忘年会を指す冠詞。
+  - **"company"**: 名詞で「会社の」。
+  - **"year-end party"**: 名詞句で「忘年会」。
+
+#### **(4) celebrated my dad's birthday**
+
+- **"celebrated"**: 動詞「celebrate（祝う）」の過去形。
+- **"my dad's birthday"**: 名詞句。「私の父の誕生日」を指します。
+  - **"my dad's"**: 所有格で「私の父の」。
+  - **"birthday"**: 名詞で「誕生日」。
+
+#### **(5) planned tomorrow's outing with my girlfriend**
+
+- **"planned"**: 動詞「plan（計画する）」の過去形。
+- **"tomorrow's outing"**: 名詞句。「明日のお出かけ」を意味します。
+  - **"tomorrow's"**: 所有格で「明日の」。
+  - **"outing"**: 名詞で「お出かけ」や「外出」。
+- **"with my girlfriend"**: 前置詞句。「私の彼女と一緒に」。
+
+---
+
+### **2. 単語の解説**
+
+#### **動詞**
+
+- **woke up**: 「wake up（起きる）」の過去形。
+- **edited**: 「edit（編集する）」の過去形。
+- **attended**: 「attend（出席する）」の過去形。
+- **celebrated**: 「celebrate（祝う）」の過去形。
+- **planned**: 「plan（計画する）」の過去形。
+
+#### **名詞**
+
+- **videos**: 「動画」。「-s」が付いて複数形。
+- **year-end party**: 「忘年会」。
+- **birthday**: 「誕生日」。
+- **outing**: 「外出」「お出かけ」。
+
+#### **所有格**
+
+- **my dad's**: 「私の父の」。「dad」に **'s** を付けて所有を表す。
+- **tomorrow's**: 「明日の」。「tomorrow」に **'s** を付けて所有を表す。
+
+---
+
+### **3. 文構造のポイント**
+
+- **並列構造**:  
+  この文では、5 つの動作（woke up, edited, attended, celebrated, planned）が **コンマ (,)** と **"and"** で並列されています。これにより、複数の行動を簡潔に列挙しています。
+
+- **過去形の統一**:  
+  すべての動詞が過去形で統一されており、「過去の出来事」を表しているのが明確です。
+
+---
+
+### **4. 全体の訳**
+
+「私は遅く起きて、動画を編集し、会社の忘年会に参加し、お父さんの誕生日を祝い、彼女と明日のお出かけを計画しました。」
+
+この文は簡潔ながら、1 日の重要な出来事を順序よく伝えています！ 😊
+
 ## 追加メモ
 
 **"woke"** の現在形は **"wake"** です。
