--- a/メモ/Markdown/英語学習/日記/2024-12-24_英語日記.md
+++ b/メモ/Markdown/英語学習/日記/2024-12-24_英語日記.md
@@ -28,3 +28,221 @@ Gemini の Advance に課金をした。2TB のストレージや Google One の
 ほかのサービスで検討しているのは、GitHub Copilot。もっと開発をするようになったら、是非試したい。その前に、Gemini でコードの扱いがもっと強化されるかもしれないが。
 
 今は、まずは基本情報技術者試験をとるのと、英語の勉強を頑張る。
+
+## 英語日記
+
+Today is December 24th, 2024.
+
+I hadn't written in my English diary since the 22nd. I almost gave up after just three days. But I wrote today, so that means I'm continuing.
+
+It doesn't have to be every day to be considered continuing. People consider it continuing if you do it within 24 hours, but who decided that? I think it's fine to consider it continuing even if you take a week off and then do it again.
+
+On the 22nd, I went to Asakusa with my girlfriend, and we had yakiniku at home at night.
+
+On the 23rd, we had yakiniku and yakisoba for lunch. It was fun to cook on a hot plate and eat together, and it was easy to prepare.
+We had a little fight when we were leaving. It was about something stupid.
+
+Today, I edited a video.
+I subscribed to a service called CapCut, but it didn't work on my Lenovo PC, so I don't know if it's because of the AMD CPU or if the specs are just not good enough. I'll try it on my DELL PC tomorrow. If that doesn't work, I'm thinking of subscribing to Canva.
+
+CapCut is good because it has a wide variety of captions. I also wanted to try the automatic subtitles, so I subscribed. But the automatic subtitles were hard to use. Vrew is too easy to use. If Vrew had a wider variety of captions, Vrew would be all I need.
+
+I use Canva for thumbnails, but it seems like I can edit videos too, so I might try the free trial. If I subscribe, I can make more professional thumbnails.
+
+I subscribed to Gemini Advanced. Considering it comes with 2TB of storage and Google One benefits, it's a great deal. Above all, it might be better than ChatGPT.
+
+Since I'm paying for subscriptions, I want to try out various things, actually use them, and evaluate them myself. If I like it after using it, I'll keep using it. If it's not good, I'll cut my losses. If there's something better, I'll use that.
+
+No attachments. Be flexible. I want to value those two ways of thinking.
+
+Another service I'm considering is GitHub Copilot. I'd love to try it if I start developing more. But before that, Gemini's code handling might be enhanced.
+
+Right now, my priorities are to pass the Fundamental Information Technology Engineer Examination and study English hard.
+
+## 文法と単語の解説
+
+**Today is December 24th, 2024.**
+
+- **Today is...**：今日は～です。日付を言う時の基本的な表現です。
+- **December 24th, 2024**: 英語の日付の書き方は、月/日/年になります。
+
+**I hadn't written in my English diary since the 22nd.**
+
+- **hadn't written**: 過去完了形。22 日から今日までの間、英語日記を書いていなかった、という過去の状態を表しています。
+- **since the 22nd**: 22 日以降、という意味の前置詞。
+
+**I almost gave up after just three days.**
+
+- **almost gave up**: もう少しで諦めるところだった、という意味。
+- **after just three days**: わずか 3 日で、という意味。
+
+**But I wrote today, so that means I'm continuing.**
+
+- **so that means**: なので、それは～という意味です。
+- **I'm continuing**: 現在進行形。継続している状態を表しています。
+
+**It doesn't have to be every day to be considered continuing.**
+
+- **doesn't have to be**: ～する必要はない。
+- **to be considered continuing**: 継続していると見なされるために。
+
+**People consider it continuing if you do it within 24 hours, but who decided that?**
+
+- **consider it continuing**: それを継続していると考える。
+- **if you do it within 24 hours**: 24 時間以内にそれをすれば。
+- **who decided that?**: 誰がそれを決めたのですか？疑問文で、少し反語的なニュアンスを含んでいます。
+
+**I think it's fine to consider it continuing even if you take a week off and then do it again.**
+
+- **I think it's fine to...**: ～しても良いと思う。
+- **even if you take a week off**: たとえ 1 週間休んでも。
+- **and then do it again**: そしてまたそれをすれば。
+
+**On the 22nd, I went to Asakusa with my girlfriend, and we had yakiniku at home at night.**
+
+- **On the 22nd**: 22 日に。日付の前に前置詞の"on"をつけます。
+- **went to Asakusa**: 浅草に行きました。
+- **with my girlfriend**: 彼女と一緒に。
+- **had yakiniku**: 焼肉を食べました。
+
+**On the 23rd, we had yakiniku and yakisoba for lunch.**
+
+- **for lunch**: 昼食に。
+
+**It was fun to cook on a hot plate and eat together, and it was easy to prepare.**
+
+- **It was fun to...**: ～するのは楽しかった。
+- **cook on a hot plate**: ホットプレートで料理する。
+- **easy to prepare**: 準備が簡単。
+
+**We had a little fight when we were leaving.**
+
+- **had a little fight**: 少し喧嘩しました。
+- **when we were leaving**: 私たちが出発するとき。
+
+**It was about something stupid.**
+
+- **about something stupid**: 馬鹿げたことについて。
+
+**Today, I edited a video.**
+
+- **edited a video**: 動画を編集しました。
+
+**I subscribed to a service called CapCut, but it didn't work on my Lenovo PC, so I don't know if it's because of the AMD CPU or if the specs are just not good enough.**
+
+- **subscribed to a service**: サービスを購読しました。
+- **called CapCut**: CapCut と呼ばれる。
+- **didn't work on my Lenovo PC**: Lenovo の PC では動作しませんでした。
+- **because of the AMD CPU**: AMD の CPU のせいで。
+- **or if the specs are just not good enough**: あるいはスペックが十分でないため。
+
+**I'll try it on my DELL PC tomorrow.**
+
+- **I'll try it**: それを試してみます。未来形。
+- **on my DELL PC**: DELL の PC で。
+
+**If that doesn't work, I'm thinking of subscribing to Canva.**
+
+- **If that doesn't work**: もしそれがうまくいかなかったら。
+- **I'm thinking of subscribing to Canva**: Canva を購読することを考えています。
+
+**CapCut is good because it has a wide variety of captions.**
+
+- **a wide variety of captions**: 多彩なキャプション。
+
+**I also wanted to try the automatic subtitles, so I subscribed.**
+
+- **automatic subtitles**: 自動字幕。
+
+**But the automatic subtitles were hard to use.**
+
+- **hard to use**: 使いにくい。
+
+**Vrew is too easy to use.**
+
+- **too easy to use**: 使いやすすぎる。
+
+**If Vrew had a wider variety of captions, Vrew would be all I need.**
+
+- **If Vrew had...**: もし Vrew が～を持っていたら。仮定法過去。
+- **a wider variety of captions**: もっと多様なキャプション。
+- **Vrew would be all I need**: Vrew だけで十分でしょう。
+
+**I use Canva for thumbnails, but it seems like I can edit videos too, so I might try the free trial.**
+
+- **for thumbnails**: サムネイルのために。
+- **it seems like I can edit videos**: 動画も編集できるようだ。
+- **I might try the free trial**: 無料体験を試してみるかもしれません。
+
+**If I subscribe, I can make more professional thumbnails.**
+
+- **If I subscribe**: もし私が購読すれば。
+- **more professional thumbnails**: よりプロフェッショナルなサムネイル。
+
+**I subscribed to Gemini Advanced.**
+
+**Considering it comes with 2TB of storage and Google One benefits, it's a great deal.**
+
+- **Considering it comes with...**: ～が付いていることを考えると。
+- **2TB of storage**: 2TB のストレージ。
+- **Google One benefits**: Google One の特典。
+- **it's a great deal**: とてもお得です。
+
+**Above all, it might be better than ChatGPT.**
+
+- **Above all**: 何よりも。
+
+**Since I'm paying for subscriptions, I want to try out various things, actually use them, and evaluate them myself.**
+
+- **Since I'm paying for subscriptions**: サブスクリプションにお金を払っているので。
+- **try out various things**: 色々なものを試してみる。
+- **actually use them**: 実際にそれらを使う。
+- **evaluate them myself**: 自分自身で評価する。
+
+**If I like it after using it, I'll keep using it.**
+
+- **If I like it after using it**: 使ってみて気に入ったら。
+- **I'll keep using it**: それを使い続けます。
+
+**If it's not good, I'll cut my losses.**
+
+- **If it's not good**: もし良くなければ。
+- **I'll cut my losses**: 損切りします。
+
+**If there's something better, I'll use that.**
+
+- **If there's something better**: もっといいものがあれば。
+- **I'll use that**: それを
+  使います。
+
+**No attachments. Be flexible.**
+
+- **No attachments**: 執着しない。
+- **Be flexible**: 臨機応変に。
+
+**I want to value those two ways of thinking.**
+
+- **value those two ways of thinking**: その 2 つの考え方を大切にしたい。
+
+**Another service I'm considering is GitHub Copilot.**
+
+- **Another service**: もう一つのサービス。
+- **I'm considering**: 私が検討している。
+
+**I'd love to try it if I start developing more.**
+
+- **I'd love to try it**: ぜひ試してみたい。
+- **if I start developing more**: もっと開発するようになったら。
+
+**But before that, Gemini's code handling might be enhanced.**
+
+- **before that**: その前に。
+- **Gemini's code handling**: Gemini のコード処理。
+- **might be enhanced**: 強化されるかもしれない。
+
+**Right now, my priorities are to pass the Fundamental Information Technology Engineer Examination and study English hard.**
+
+- **Right now**: 今は。
+- **my priorities are to...**: 私の優先事項は～することです。
+- **pass the Fundamental Information Technology Engineer Examination**: 基本情報技術者試験に合格すること。
+- **study English hard**: 英語を一生懸命勉強すること。
